style: Change padding for buttons on mobile, for profile page

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -13,22 +13,22 @@
             <h2 class="liner upper">My Profile </h2>
             <button class="btn pb-4 back-button" onclick="goBack()">&larr; Back</button>
             <div class="d-flex flex-sm-row flex-column justify-content-center mb-4">
-                <button id="collapseInfoBtn" class="btn btn-lg btn-cta text-white px-4 py-4 me-3" type="button"
-                    data-bs-toggle="collapse" data-bs-target="#collapseInfo" aria-expanded="false"
+                <button id="collapseInfoBtn" class="btn btn-lg btn-cta text-white px-sm-4 px-2 py-sm-4 py-3 me-3"
+                    type="button" data-bs-toggle="collapse" data-bs-target="#collapseInfo" aria-expanded="false"
                     aria-controls="collapseInfo">
                     <i class="fa-solid fa-user-pen fa-lg"></i>&nbsp;Profile Info
                 </button>
-                <button id="collapseHistoryBtn" class="btn btn-lg btn-cta text-white px-4 py-4 me-3" type="button"
-                    data-bs-toggle="collapse" data-bs-target="#collapseHistory" aria-expanded="false"
+                <button id="collapseHistoryBtn" class="btn btn-lg btn-cta text-white px-sm-4 px-2 py-sm-4 py-3 me-3"
+                    type="button" data-bs-toggle="collapse" data-bs-target="#collapseHistory" aria-expanded="false"
                     aria-controls="collapseHistory">
                     <i class="fa-solid fa-cart-shopping fa-lg"></i>&nbsp;Order History
                 </button>
-                <button id="collapseWishlistBtn" class="btn btn-lg btn-cta text-white px-4 py-4 me-3" type="button"
-                    data-bs-toggle="collapse" data-bs-target="#collapseWishlist" aria-expanded="false"
+                <button id="collapseWishlistBtn" class="btn btn-lg btn-cta text-white px-sm-4 px-2 py-sm-4 py-3 me-3"
+                    type="button" data-bs-toggle="collapse" data-bs-target="#collapseWishlist" aria-expanded="false"
                     aria-controls="collapseWishlist">
                     <i class="fa-solid fa-cart-shopping fa-lg"></i>&nbsp;Wishlist
                 </button>
-                <button id="deleteBtn" class="btn btn-lg btn-cta text-white px-4 py-4" type="button"
+                <button id="deleteBtn" class="btn btn-lg btn-cta text-white px-sm-4 px-2 py-sm-4 py-3" type="button"
                     data-bs-toggle="modal" data-bs-target="#deleteModal" aria-expanded="false">
                     <i class="fa-regular fa-trash-can fa-lg"></i>&nbsp;Delete Account
                 </button>
