--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -71,8 +71,8 @@
                         </div>
                     </fieldset>
                     <div class="text-right">
-                        <a class="btn btn-secondary rounded-0 mt-3" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-cta text-white" type="submit">Add Product</button>
+                        <a class="btn btn-secondary rounded-0 mt-3" href="{% url 'products' %}">Cancel</a>
                     </div>
                 </form>
             </div>
@@ -86,11 +86,14 @@
 <!-- JS to display message after Image was selected -->
 <script>
     $(function () {
+        // Get the input element and the message element
         const input = $('#new-image');
         const message = $('#message');
 
+        // Set up a change event listener on the input element
         input.on('change', () => {
             const fileName = input.val().split('\\').pop();
+            // Update the message element with the file name
             message.text(`Image will be set to: ${fileName}`);
         });
     });
