--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -17,63 +17,11 @@
                     enctype="multipart/form-data">
                     <h2 class="upper liner">Update Product&nbsp;</h2>
                     {% csrf_token %}
-                    <fieldset class="rounded mb-4 d-flex flex-column align-items-center">
-                        <legend class="fieldset-label fs-6 fw-bold auto text-black mb-2">Details</legend>
-                        <div class="w-100 text-start">
-                            {{ form.title|as_crispy_field }}
-                        </div>
-                        <div class="d-flex w-100">
-                            <div class="flex-grow-1">
-                                {{ form.sku|as_crispy_field }}
-                            </div>
-                            <div class="ps-2 flex-grow-1">
-                                {{ form.category|as_crispy_field }}
-                            </div>
-                        </div>
-                        <div class="w-100 text-start">
-                            {{ form.description|as_crispy_field }}
-                        </div>
-                    </fieldset>
-                    <fieldset class="rounded mb-4 d-flex flex-column align-items-center">
-                        <legend class="fieldset-label fs-6 fw-bold auto text-black mb-2">Image</legend>
-                        <div class="d-flex w-100">
-                            <div class="flex-grow-1">
-                                {{ form.image }}
-                            </div>
-                        </div>
-                    </fieldset>
-                    <fieldset class="rounded mb-4 d-flex flex-column align-items-center">
-                        <legend class="fieldset-label fs-6 fw-bold auto text-black mb-2">Pricing</legend>
-                        <div class="d-flex w-100">
-                            <div class="flex-grow-1">
-                                {{ form.retail_price|as_crispy_field }}
-                            </div>
-                            <div class="ps-2 flex-grow-1">
-                                {{ form.sale|as_crispy_field }}
-                                {{ form.sale_price|as_crispy_field }}
-                            </div>
-                        </div>
-                    </fieldset>
-                    <fieldset class="rounded mb-3 d-flex flex-column align-items-center">
-                        <legend class="fieldset-label fs-6 fw-bold auto text-black mb-2">Additional Information</legend>
-                        <div class="d-flex w-100">
-                            <div class="flex-grow-1">
-                                {{ form.brand|as_crispy_field }}
-                                {{ form.bike_type|as_crispy_field }}
-                                {{ form.gender|as_crispy_field }}
-                                {{ form.stock|as_crispy_field }}
-                            </div>
-                            <div class="ps-2 flex-grow-1">
-                                {{ form.derailleur|as_crispy_field }}
-                                {{ form.wheel_size|as_crispy_field }}
-                                {{ form.rating|as_crispy_field }}
-                                {{ form.material|as_crispy_field }}
-                            </div>
-                        </div>
-                    </fieldset>
+                    <!-- Product Form Fields-->
+                    {% include 'products/components/add_edit_product_formfields.html' %}
                     <div class="text-right">
-                        <a class="btn btn-secondary rounded-0 mt-3" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-cta text-white" type="submit">Update Product</button>
+                        <a class="btn btn-secondary rounded-0 mt-3" href="{% url 'products' %}">Cancel</a>
                     </div>
                 </form>
             </div>
