style: Change image preview to width: fit-content and add margin auto

--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -2,7 +2,7 @@
 {% if widget.is_initial %}
 <p>{{ widget.initial_text }}:</p>
 <!-- Image Preview -->
-<div>
+<div class="image-preview mx-auto">
     <a href="{{ widget.value.url }}">
         <img class="product-img" src="{{ widget.value.url }}">
     </a>
