--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -174,6 +174,10 @@ select:invalid {
     accent-color: #cd4c1d;
 }
 
+.image-preview {
+    width: fit-content;
+}
+
 /*=============== Media ===============*/
 @media (max-width: 767px) {
     .product-management {
