--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -39,13 +39,13 @@
                             <p class="mt-2 mb-1"><strong>{{ item.product.title }}</strong></p>
                             <p class="my-0 small text-muted">Size: {{ item.product.wheel_size }}</p>
                             {% if item.product.sale %}
-                            <p class="price mb-0 mt-4 me-3 text-end">Total:
+                            <p class="price mt-4 me-3 text-end">Total:
                                 {{ item.product.sale_price | multiply_price_by_quantity:item.quantity |intcomma}}€</p>
                             {% if item.quantity > 1%}
                             <p class="text-end me-3">{{ item.product.sale_price |intcomma}}€</p>
                             {% endif %}
                             {% else %}
-                            <p class="price mb-0 mt-4 text-end me-3">Total:
+                            <p class="price mt-4 text-end me-3">Total:
                                 {{ item.product.retail_price| multiply_price_by_quantity:item.quantity|intcomma  }}€</p>
                             {% if item.quantity > 1%}
                             <p class="text-end me-3">{{ item.product.retail_price |intcomma}}€</p>
