style: Add flex wrap to input fields in profile info

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -43,7 +43,7 @@
                             <div class="margin-end flex-grow-1">
                                 {{ order_form.postcode | as_crispy_field }}
                             </div>
-                            <div class="margin-end flex-grow-1">
+                            <div class="flex-grow-1">
                                 {{ order_form.town_or_city | as_crispy_field }}
                             </div>
                         </div>
