--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -43,9 +43,11 @@
                         {% csrf_token %}
                         <fieldset class="rounded mb-4 d-flex flex-column align-items-center">
                             <legend class="fieldset-label small px-2 auto text-black mb-2">Details</legend>
-                            <div class="d-flex w-100">
-                                <div class="pe-2 flex-grow-1">
+                            <div class="d-flex w-100 flex-wrap">
+                                <div class="margin-end flex-grow-1">
                                     {{ form.default_full_name | as_crispy_field }}
+                                </div>
+                                <div class="flex-grow-1">
                                     {{ form.default_phone_number | as_crispy_field }}
                                 </div>
                             </div>
@@ -54,11 +56,11 @@
                             <legend class="fieldset-label small text-black px-2 w-auto">Delivery/Billing</legend>
                             {{ form.default_street_address1 | as_crispy_field }}
                             {{ form.default_street_address2 | as_crispy_field }}
-                            <div class="d-flex w-100">
-                                <div class="pe-2 flex-grow-1">
+                            <div class="d-flex w-100 flex-wrap">
+                                <div class="margin-end flex-grow-1">
                                     {{ form.default_postcode | as_crispy_field }}
                                 </div>
-                                <div class="ps-2 flex-grow-1">
+                                <div class="flex-grow-1">
                                     {{ form.default_town_or_city | as_crispy_field }}
                                 </div>
                             </div>
