--- a/products/templates/products/components/add_edit_product_formfields.html
+++ b/products/templates/products/components/add_edit_product_formfields.html
@@ -3,11 +3,11 @@
     <div class="w-100 text-start">
         {{ form.title|as_crispy_field }}
     </div>
-    <div class="d-flex w-100">
-        <div class="flex-grow-1">
+    <div class="d-flex w-100 flex-wrap">
+        <div class="margin-end flex-grow-1">
             {{ form.sku|as_crispy_field }}
         </div>
-        <div class="ps-2 flex-grow-1">
+        <div class="flex-grow-1">
             {{ form.category|as_crispy_field }}
         </div>
     </div>
@@ -37,14 +37,14 @@
 </fieldset>
 <fieldset class="rounded mb-3 d-flex flex-column align-items-center">
     <legend class="fieldset-label fs-6 fw-bold auto text-black mb-2">Additional Information</legend>
-    <div class="d-flex w-100">
-        <div class="flex-grow-1">
+    <div class="d-flex w-100 flex-wrap">
+        <div class="margin-end flex-grow-1">
             {{ form.brand|as_crispy_field }}
             {{ form.bike_type|as_crispy_field }}
             {{ form.gender|as_crispy_field }}
             {{ form.stock|as_crispy_field }}
         </div>
-        <div class="ps-2 flex-grow-1">
+        <div class="flex-grow-1">
             {{ form.derailleur|as_crispy_field }}
             {{ form.wheel_size|as_crispy_field }}
             {{ form.rating|as_crispy_field }}
