--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -12,7 +12,7 @@
     <section class="margin-top mx-3">
         <h1 class="liner upper">Product Management&nbsp;</h1>
         <div class="d-flex flex-column flex-md-row justify-content-around mt-md-3">
-            <div class="d-flex flex-row product-management p-lg-5 p-4 mb-4">
+            <div class="d-flex flex-row product-management p-lg-5 p-md-4 p-3 mb-4">
                 <form method="POST" action="{% url 'edit_product' product.id %}" class="w-100"
                     enctype="multipart/form-data">
                     <h2 class="upper liner">Update Product&nbsp;</h2>
