--- a/bag/static/bag/css/bag.css
+++ b/bag/static/bag/css/bag.css
@@ -1,33 +1,3 @@
-.product-image-container-bag {
-    height: 100px;
-    width: 30%;
-}
-
-.product-container-bag {
-    box-shadow: 0 2px 8px 0 rgb(0 0 0 / 17%);
-}
-
-.order-summary {
-    background-color: #dfdfdf;
-    height: fit-content;
-    box-shadow: 0 0.3rem 1.525rem -0.375rem rgb(0 0 0 / 10%);
-}
-
-.order-total {
-    border-top: dashed 1px #a7a7a7;
-}
-
-.divder-bag {
-    max-width: 90%;
-    border-top: dashed 1px #000;
-    background-color: #fff;
-}
-
-.shopping-cart .input-group>.form-control {
-    flex: none;
-    width: 60px;
-}
-
 .btn-qty-update-bag {
     transition: all .4s ease;
     white-space: nowrap;
@@ -40,7 +10,37 @@
     transform: scale(1.02);
 }
 
+.divder-bag {
+    max-width: 90%;
+    border-top: dashed 1px #000;
+    background-color: #fff;
+}
 
+.order-summary {
+    background-color: #dfdfdf;
+    height: fit-content;
+    box-shadow: 0 0.3rem 1.525rem -0.375rem rgb(0 0 0 / 10%);
+}
+
+.order-total {
+    border-top: dashed 1px #a7a7a7;
+}
+
+.product-container-bag {
+    box-shadow: 0 2px 8px 0 rgb(0 0 0 / 17%);
+}
+
+.product-image-container-bag {
+    height: 100px;
+    width: 30%;
+}
+
+.shopping-cart .input-group>.form-control {
+    flex: none;
+    width: 60px;
+}
+
+/*=============== Media ===============*/
 @media only screen and (max-width: 991px) {
     .order-summary {
         padding: 2rem;
