feat: Add structure to contact template and css styling for contact form

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -5,7 +5,7 @@
             <div class="col-4">
                 <h3 class="upper">Help and Support</h3>
                 <ul>
-                    <li>Contact Us</li>
+                    <li><a href="{% url 'contact' %}">Contact Us</a></li>
                     <li>FAQs</li>
                     <li>Return Policy</li>
                 </ul>
