style: Change flex-warp to flex-column and row for all forms. Instead of flex-warp add exact breakpoints with flex-column on medium and large screens and flex-ro for smaller screens.

--- a/products/templates/products/components/add_edit_product_formfields.html
+++ b/products/templates/products/components/add_edit_product_formfields.html
@@ -3,7 +3,7 @@
     <div class="w-100 text-start">
         {{ form.title|as_crispy_field }}
     </div>
-    <div class="d-flex w-100 flex-wrap">
+    <div class="d-flex w-100 flex-column flex-sm-row">
         <div class="margin-end flex-grow-1">
             {{ form.sku|as_crispy_field }}
         </div>
@@ -37,7 +37,7 @@
 </fieldset>
 <fieldset class="rounded mb-3 d-flex flex-column align-items-center">
     <legend class="fieldset-label fs-6 fw-bold auto text-black mb-2">Additional Information</legend>
-    <div class="d-flex w-100 flex-wrap">
+    <div class="d-flex w-100 flex-column flex-sm-row">
         <div class="margin-end flex-grow-1">
             {{ form.brand|as_crispy_field }}
             {{ form.bike_type|as_crispy_field }}
