--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -23,7 +23,7 @@
                     <p class="text-muted">Please enter your Details to complete your order.</p>
                     <fieldset class="rounded mb-4 d-flex flex-column align-items-center">
                         <legend class="fieldset-label small px-2 auto text-black mb-2">Details</legend>
-                        <div class="d-flex w-100 flex-wrap">
+                        <div class="d-flex w-100 flex-column flex-sm-row">
                             <div class="margin-end flex-grow-1">
                                 {{ order_form.full_name | as_crispy_field }}
                             </div>
@@ -39,7 +39,7 @@
                         <legend class="fieldset-label small text-black px-2 w-auto">Delivery</legend>
                         {{ order_form.street_address1 | as_crispy_field }}
                         {{ order_form.street_address2 | as_crispy_field }}
-                        <div class="d-flex w-100 flex-wrap">
+                        <div class="d-flex w-100 flex-column flex-sm-row">
                             <div class="margin-end flex-grow-1">
                                 {{ order_form.postcode | as_crispy_field }}
                             </div>
