--- a/static/css/base.css
+++ b/static/css/base.css
@@ -544,7 +544,9 @@ footer ul {
     .margin-top {
         margin-top: 5rem;
     }
+}
 
+@media only screen and (max-width: 575px) {
     .margin-end {
         margin-right: 0;
     }
