feat: Create basic template for FAQs and add link to footer

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -6,7 +6,7 @@
                 <h3 class="upper">Help and Support</h3>
                 <ul>
                     <li><a href="{% url 'contact' %}">Contact Us</a></li>
-                    <li>FAQs</li>
+                    <li><a href="{% url 'faq' %}">FAQs</a></li>
                     <li>Return Policy</li>
                 </ul>
             </div>
