--- a/support/templates/support/faq.html
+++ b/support/templates/support/faq.html
@@ -10,7 +10,8 @@
     <!-- FAQs -->
     <section class="margin-top mx-3">
         <h1 class="liner upper">FAQs&nbsp;</h1>
-        <p class="px-4 py-3 ms-4">Welcome to Bike World! We're thrilled that you're interested in shopping with us for
+        <p class="px-4 py-3 ms-sm-4 ms-0">Welcome to Bike World! We're thrilled that you're interested in shopping with
+            us for
             all your mountain biking needs. To help make your shopping experience as smooth and enjoyable as possible,
             we've put together a list of frequently asked questions. Whether you have questions about placing an order,
             payment options, returns, or our products, we've got you covered. If you don't see the answer to your
@@ -19,11 +20,11 @@
         <div class="d-flex flex-column flex-md-row justify-content-around mt-md-3">
             <div class="d-flex flex-row support-container p-lg-5 p-md-4 p-3 mb-4">
                 <!-- FAQs Accordion-->
-                <div class="accordion my-5" id="accordionDetail">
+                <div class="accordion w-100" id="accordionDetail">
                     <!-- FAQ Orders-->
-                    <div class="accordion-item">
+                    <div class="accordion-item rounded-0">
                         <h2 class="accordion-header" id="headingOne">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            <button class="accordion-button rounded-0" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                 Orders:
                             </button>
@@ -46,9 +47,9 @@
                         </div>
                     </div>
                     <!-- FAQ Payment-->
-                    <div class="accordion-item">
+                    <div class="accordion-item rounded-0">
                         <h2 class="accordion-header" id="headingTwo">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            <button class="accordion-button collapsed rounded-0" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                                 Payment:
                             </button>
@@ -68,14 +69,14 @@
                         </div>
                     </div>
                     <!-- FAQ Returns-->
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="headingFour">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    <div class="accordion-item rounded-0 ">
+                        <h2 class="accordion-header" id="headingThree">
+                            <button class="accordion-button collapsed rounded-0" type="button" data-bs-toggle="collapse"
+                                data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                                 Returns:
                             </button>
                         </h2>
-                        <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                        <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
                             data-bs-parent="#accordionDetail">
                             <div class="accordion-body">
                                 <p><strong>What is your return policy?</strong></p>
@@ -95,9 +96,9 @@
                         </div>
                     </div>
                     <!-- FAQ Products-->
-                    <div class="accordion-item">
+                    <div class="accordion-item rounded-0">
                         <h2 class="accordion-header" id="headingFour">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            <button class="accordion-button collapsed rounded-0" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                                 Products:
                             </button>
