--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -2,7 +2,8 @@
 <footer>
     <div class="container-fluid p-4">
         <div class="row">
-            <div class="col-8">
+            <div class="col-sm-8 col-12">
+                <!-- Mailchimp Email Signup-->
                 <h3 class="upper">Sign Up</h3>
                 <div id="mc_embed_signup">
                     <form
@@ -11,7 +12,6 @@
                         target="_blank" novalidate>
                         <div id="mc_embed_signup_scroll">
                             <p>Sign up for our newsletter and be the first to know about new bikes and great deals.</p>
-                            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                             <div class="mc-field-group">
                                 <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
                                 </label>
@@ -29,7 +29,7 @@
                             <div class="optionalParent">
                                 <div class="clear foot">
                                     <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
-                                        class="button">
+                                        class="btn btn-cta text-white border-0 rounded-0">
                                 </div>
                             </div>
                         </div>
@@ -37,7 +37,7 @@
                 </div>
                 <!--End mc_embed_signup-->
             </div>
-            <div class="col-4">
+            <div class="col-sm-4 col-12">
                 <h3 class="upper">Help and Support</h3>
                 <ul>
                     <li><a href="{% url 'contact' %}">Contact Us</a></li>
