feat: Add email to UserProfile Form and Profile view. Add field to template

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -51,6 +51,7 @@
                                     {{ form.default_phone_number | as_crispy_field }}
                                 </div>
                             </div>
+                            {{ form.default_email | as_crispy_field }}
                         </fieldset>
                         <fieldset class="rounded mb-4">
                             <legend class="fieldset-label small text-black px-2 w-auto">Delivery/Billing</legend>
