--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -2,6 +2,10 @@
     max-width: 800px;
 }
 
+#div_id_default_email {
+    width: 100%;
+}
+
 .profile-details {
     background-color: #dfdfdf;
     box-shadow: 0 0.3rem 1.525rem -0.375rem rgb(0 0 0 / 10%);
