--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -14,7 +14,7 @@
                     src="{{ MEDIA_URL }}/homepage-images/logo.webp" alt="Bike World Logo"></a>
             <!-- Collapsible wrapper -->
             <div class="collapse navbar-collapse" id="navbarToggler">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0 w-100">
                     <li class="nav-item mx-1">
                         <a class="nav-link text-nowrap" href="{% url 'products' %}">All Bikes</a>
                     </li>
