improvement: Add title to all templates

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -9,6 +9,10 @@
 <link rel="stylesheet" href="{% static 'css/quantity_input.css' %}">
 {% endblock %}
 
+{% block title %}
+Shopping Bag
+{% endblock %}
+
 {% block content %}
 <main>
     <!-- Shopping Bag -->
