--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -8,6 +8,10 @@
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
+{% block title %}
+Checkout
+{% endblock %}
+
 {% block content %}
 <main>
     <!-- Checkout -->
