--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -9,6 +9,10 @@
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
+{% block title %}
+Thank You For Your Order.
+{% endblock %}
+
 {% block content %}
 <main>
     <!-- Checkout -->
