--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% load humanize %}
 
+{% block title %}
+Find your Mountain for your adventure.
+{% endblock %}
 
 {% block content %}
 <main>
