--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -8,6 +8,8 @@
 <link rel="stylesheet" href="{% static 'css/quantity_input.css' %}">
 {% endblock %}
 
+{% block title %}{{ title }}{% endblock %}
+
 {% block content %}
 <section id="product-detail" class="margin-top">
     <div class="container">
