--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -6,6 +6,10 @@
 <link rel="stylesheet" href="{% static 'products/css/products.css' %}">
 {% endblock %}
 
+{% block title %}
+Our Mountainbikes
+{% endblock %}
+
 {% block content %}
 <!-- Product List -->
 <section>
