--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -5,6 +5,10 @@
 <link rel="stylesheet" href="{% static 'profiles/css/profiles.css' %}">
 {% endblock %}
 
+{% block title %}
+Your Profile
+{% endblock %}
+
 {% block content %}
 <!-- User Profile -->
 <main>
