--- a/support/templates/support/faq.html
+++ b/support/templates/support/faq.html
@@ -5,6 +5,10 @@
 <link rel="stylesheet" href="{% static 'support/css/support.css' %}">
 {% endblock %}
 
+{% block title %}
+FAQs
+{% endblock %}
+
 {% block content %}
 <main>
     <!-- FAQs -->
