--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
     {% block extra_js %}
     {% endblock %}
 
-    <title>Bike World | {{ title }}</title>
+    <title>Bike World | {% block title %}{% endblock %}</title>
 </head>
 
 <body>
