--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -6,6 +6,10 @@
 <link rel="stylesheet" href="{% static 'products/css/products.css' %}">
 {% endblock %}
 
+{% block title %}
+Add a new product
+{% endblock %}
+
 {% block content %}
 <main>
     <!-- Add Product -->
