--- a/support/templates/support/contact.html
+++ b/support/templates/support/contact.html
@@ -5,6 +5,10 @@
 <link rel="stylesheet" href="{% static 'support/css/support.css' %}">
 {% endblock %}
 
+{% block title %}
+Contact Us
+{% endblock %}
+
 {% block content %}
 <main>
     <!-- Contact Form -->
