--- a/static/css/base.css
+++ b/static/css/base.css
@@ -348,6 +348,11 @@ footer ul {
     padding: 0 !important;
 }
 
+#mc_embed_signup #mc-embedded-subscribe-form div.mce_inline_error {
+    background-color: transparent !important;
+    color: #cd4c1e !important;
+}
+
 .optionalParent {
     width: 10rem;
 }
