style: Add text-dark to footer help and support

--- a/templates/components/footer.html
+++ b/templates/components/footer.html
@@ -40,8 +40,8 @@
             <div class="col-sm-4 col-12">
                 <h3 class="upper">Help and Support</h3>
                 <ul>
-                    <li><a href="{% url 'contact' %}">Contact Us</a></li>
-                    <li><a href="{% url 'faq' %}">FAQs</a></li>
+                    <li><a href="{% url 'contact' %}" class="text-dark">Contact Us</a></li>
+                    <li><a href="{% url 'faq' %}" class="text-dark">FAQs</a></li>
                     <li>Return Policy</li>
                 </ul>
                 <h3 class="upper">About Us</h3>
