--- a/products/templates/products/components/product_accordion_detail_info_pdp.html
+++ b/products/templates/products/components/product_accordion_detail_info_pdp.html
@@ -58,4 +58,25 @@
             </div>
         </div>
     </div>
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="headingThree">
+            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree"
+                aria-expanded="true" aria-controls="collapseThree">
+                Reviews
+            </button>
+        </h2>
+        <div id="collapseThree" class="accordion-collapse collapse show" aria-labelledby="headingThree"
+            data-bs-parent="#accordionDetail">
+            <div class="accordion-body">
+                {% for review in reviews %}
+                <div class="review">
+                    <h3>{{ review.user }} - {{ review.rating }}/5</h3>
+                    <p>{{ review.review }}</p>
+                </div>
+                {% empty %}
+                <p>No reviews yet.</p>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 </div>
